Changed project structure (again). Now is a Maven project :)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ hs_err_pid*
 /RetamDatabase2/dist/
 /RetamDatabase/dist/
 /RetamDatabase/build/
+/mavenproject1/target/
+/RetamDabatse/target/
+/RetamDatabase/target/
