--- a/RetamMigration/pom.xml
+++ b/RetamMigration/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <mainClass>fundabitat.retam.retammigration.Main</mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.11.2</version>
+        </dependency>
+    </dependencies>
 </project>
