Migration can use main app classes. It FINALLY works.

--- a/RetamMigration/pom.xml
+++ b/RetamMigration/pom.xml
@@ -5,6 +5,9 @@
     <artifactId>RetamMigration</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <name>RetamMigration</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -21,6 +24,11 @@
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>fundabitat</groupId>
+            <artifactId>RetamDatabase</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
