Representative migrated successfully

--- a/RetamMigration/src/main/resources/config.properties
+++ b/RetamMigration/src/main/resources/config.properties
@@ -8,6 +8,7 @@ separator=|
 # CSV files
 countryFile=src/main/resources/exportData/asIs/exportPais.csv
 organizationFile=src/main/resources/exportData/query/exportInstitucion.csv
+representativeFile=src/main/resources/exportData/query/exportRepresentante.csv
 
 # Pre-migration scripts
 scripts=src/main/resources/db/delete.sql,src/main/resources/db/seed.sql
