Project migrated successfully!

--- a/RetamMigration/src/main/resources/config.properties
+++ b/RetamMigration/src/main/resources/config.properties
@@ -9,6 +9,7 @@ separator=|
 countryFile=src/main/resources/exportData/asIs/exportPais.csv
 organizationFile=src/main/resources/exportData/query/exportInstitucion.csv
 representativeFile=src/main/resources/exportData/query/exportRepresentante.csv
+projectFile=src/main/resources/exportData/query/exportProyecto.csv
 
 # Pre-migration scripts
 scripts=src/main/resources/db/delete.sql,src/main/resources/db/seed.sql
