--- a/RetamMigration/pom.xml
+++ b/RetamMigration/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>RetamDatabase</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 </project>
